# 1ml_web

./: .gitignore  .gitmodules  README.md  dune  dune-project  serve.sh  setup.sh  web.ml
.github/workflows/: deploy.yml
1ml/: 1ml  Makefile  Makefile.depend  fomega.ml  fomega.mli  lexer.ml  main.ml  parser.ml  prim.ml  prim.mli  types.ml  types.mli
docs/: index.html  web.ml
docs/css/: style.css
docs/js/: dune  web.js
web/: dune
web/1ml/: parser.mli
web/css/: style.css
web/js/: web.js
